# ai-crawler

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml
.dev/: README.md
.dev/01-product/: decisions.md  open-source-generality-principles.md
.dev/02-architecture/: architecture.md  code-organization-principles.md
.dev/03-ai/: auto-harness-contract.md  communication.md  orchestration.md
.dev/04-mcp/: server.md
.dev/05-recipe/: spec.md
.dev/06-implementation/: development-sequence.md  mvp-plan.md  roadmap.md  runner-concurrency-spike.md  runner-hardening-plan.md
.dev/07-quality/: engineering-checklist.md  testing-strategy.md
.dev/08-operations/: challenge-handling-policy.md  risks.md  security-and-compliance.md
.github/workflows/: ci.yml  npm-publish.yml
docs/: harness-examples.md  release-runbook.md
lib/: wrapper.cjs
scripts/: check-python.sh  cleanup-wrapper-metadata.cjs  smoke-mcp-auto-compile.py  verify-ai-harness.sh  write-wrapper-metadata.cjs
src/ai_crawler/: __init__.py
src/ai_crawler/adapters/: __init__.py
src/ai_crawler/cli/: __init__.py  __main__.py  main.py
src/ai_crawler/core/: __init__.py
src/ai_crawler/mcp/: __init__.py  config.py  server.py  tools.py
src/ai_crawler/release/: __init__.py  npm_publish.py
src/ai_crawler/sdk/: __init__.py  client.py
src/ai_crawler/testing/: __init__.py
test/: npm-wrapper.test.cjs
tests/: test_cli.py  test_import.py
tests/integration/fixture_site/: test_fixture_site.py
tests/unit/: test_npm_publish_guard.py
tests/unit/cli/: test_auto_command.py  test_compile_command.py  (+6 more)
(+62 files in other folders)
